@@ -1420,7 +1420,7 @@ bool Mob::Flurry()
     Mob *target = GetHateTop();
 	if (target) {
 		entity_list.MessageClose(this, true, 200, 13, "%s executes a FLURRY of attacks on %s!", GetCleanName(), target->GetCleanName());
-		for (int i = 0; i < MAX_FLURRY_HITS; i++)
+		for (int i = 0; i < RuleI(Combat, MaxFlurryHits); i++)
 			Attack(target);
 	}
     return true;
@@ -1433,49 +1433,44 @@ bool Mob::AddRampage(Mob *mob)
 
     if (!SpecAttacks[SPECATK_RAMPAGE])
         return false;
-    for (int i = 0; i < MAX_RAMPAGE_LIST; i++)
+
+    for (int i = 0; i < RampageArray.size(); i++)
     {
         // if name is already on the list dont add it again
-        if (strcasecmp(mob->GetName(), RampageArray[i]) == 0)
+        if (strcasecmp(mob->GetName(), RampageArray[i].c_str()) == 0)
             return false;
-
-		if (RampageArray[i][0] == 0 ){ //we assume the slot is free if the first character is empty.
-			strcpy(RampageArray[i], mob->GetName());
-			LogFile->write(EQEMuLog::Normal, "Adding %s to Rampage List in slot %d", RampageArray[i], i);
-			return true;
-		}
 	}
-    return false;
+	std::string r_name = mob->GetName();
+	RampageArray.push_back(r_name);
+    return true;
 }
 
 void Mob::ClearRampage(){
-	memset(RampageArray, 0, sizeof(RampageArray));
+	RampageArray.clear();
 }
 
 bool Mob::Rampage()
 {
 	int index_hit = 0;
 	entity_list.MessageClose(this, true, 200, 13, "%s goes on a RAMPAGE!", GetCleanName());
-    for (int i = 0; i < MAX_RAMPAGE_LIST; i++)
+    for (int i = 0; i < RampageArray.size(); i++)
     {
-		if(index_hit >= MAX_RAMPAGE_TARGETS)
+		if(index_hit >= RuleI(Combat, MaxRampageTargets))
 			break;	
         // range is important
-        if (strlen(RampageArray[i]) == 0)
-        	continue;
-        Mob *target = entity_list.GetMob(RampageArray[i]);
-        if(target)
+		Mob *m_target = entity_list.GetMob(RampageArray[i].c_str());
+        if(m_target)
         {
-			if(target == GetTarget())
+			if(m_target == GetTarget())
 				continue;
-            if (CombatRange(target))
+            if (CombatRange(m_target))
 			{
-                Attack(target);
+                Attack(m_target);
 				index_hit++;
 			}
         }
     }
-	if(index_hit == 0)
+	if(index_hit < RuleI(Combat, MaxRampageTargets))
 		Attack(GetTarget());
     return true;
 }
